fixed input jump5

--- a/src/containers/Auth/Auth.module.css
+++ b/src/containers/Auth/Auth.module.css
@@ -7,7 +7,7 @@
     padding: 10px;
     box-sizing: border-box;
     background-color: white;
-    display: inline-block;
+    display: block;
 }
 
 @media (min-width: 600px) {
